--- a/Basic JavaScripts Projects/Basic_HTML_2.html
+++ b/Basic JavaScripts Projects/Basic_HTML_2.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="JS/Basic_JavaScript_1.js"></script>
+        <script src="JS/Basic_JavaScript_2.js"></script>
     </head>   
     <body>
-        <button onclick="myFirst
-        Function()" id="Green_Text">
-        Click me!
-        <p id="Concatenate"></p>
-        <p id= "Concatenate" onclick = "myFunction()"></p>
-        </button>
+        <p id = "Sum_1" button onclick="Add()" id="Sum_1">3+3=?</button></p>
     </body>
 </html>
